Replaced dominant-baseline with dy to fix alignment issues on IE
Added overflow to prevent legend label cut off on firefox

Made font size of labels and values equal so they align properly

Changes after code review

--- a/src/assets/styles/axis.less
+++ b/src/assets/styles/axis.less
@@ -48,6 +48,7 @@
     font-weight: @font-weight-base;
     line-height: @line-height-base;
     fill: @font-colour;
+    dominant-baseline: auto;
   }
   .tick path {
     stroke: @gridline-colour;
