--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -67,6 +67,7 @@
     text {
       font-size: @font-size-base;
       fill: @font-colour;
+      dominant-baseline: auto;
     }
 
     #brush-mask {
